--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
     -->
     <title>Socket Test</title>
   </head>
-  <body>
+  <body class="bg-cyan-800 p-1 w-screen h-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="bg-cyan-800 p-1 w-screen h-screen"></div>
+    <div id="root" class="bg-cyan-800 w-screen h-screen"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
